fix alignment in mobile and tablet

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -8662,7 +8662,12 @@ body {
   max-width: 300px;
 }
 form#search {
-  margin-bottom: 0;
+  margin-bottom: 20px;
+}
+@media (min-width: 768px) {
+  form#search {
+    margin-bottom: 0;
+  }
 }
 #search .btn {
   height: 36px;
@@ -8676,10 +8681,6 @@ form#search {
     display: inline;
   }
 }
-#results-info {
-  margin-top: 5px;
-  margin-bottom: -10px;
-}
 @media (min-width: 768px) {
   #results-info {
     margin: 0;
@@ -8687,7 +8688,20 @@ form#search {
 }
 .lend {
   background-color: #f9f9f9;
-  padding-top: 22px;
+  padding: 0 0 15px 0 !important;
+  margin-bottom: -15px;
+}
+@media (min-width: 768px) {
+  .lend {
+    margin-bottom: -30px;
+    padding: 22px 0 30px 0 !important;
+  }
+}
+@media (min-width: 768px) {
+  .lend {
+    margin-bottom: -50px;
+    padding: 22px 0 50px 0 !important;
+  }
 }
 #mobile-results-desc {
   background-color: #f9f9f9;
@@ -8719,13 +8733,19 @@ form#search {
 }
 #about-category {
   display: block;
-  margin-top: 10px;
+}
+@media (min-width: 768px) {
+  #about-category {
+    margin-left: -15px;
+    margin-top: 10px;
+  }
 }
 @media (min-width: 992px) {
   #about-category {
+    float: right;
     display: inline;
-    float: right !important;
     margin-top: 0;
+    margin-right: -15px;
   }
 }
 .result {
