--- a/public/assets/less/lend.less
+++ b/public/assets/less/lend.less
@@ -1,13 +1,20 @@
 #results-info {
-    margin-top: 5px;
-    margin-bottom: -10px;
     @media (min-width: @screen-sm-min) {
         margin: 0;
     }
 }
 .lend {
     background-color: #f9f9f9;
-    padding-top: 22px;
+    padding: 0 0 15px 0 !important;
+    margin-bottom: -15px;
+    @media (min-width: @screen-sm-min) {
+        margin-bottom: -30px;
+        padding: 22px 0 30px 0 !important;
+    }
+    @media (min-width: @screen-sm-min) {
+        margin-bottom: -50px;
+        padding: 22px 0 50px 0 !important;
+    }
 }
 #mobile-results-desc {
     background-color: #f9f9f9;
@@ -33,11 +40,15 @@
 }
 #about-category {
     display: block;
-    margin-top: 10px;
+    @media (min-width: @screen-sm-min) {
+        margin-left: -15px;
+        margin-top: 10px;
+    }
     @media (min-width: @screen-md-min) {
+        float: right;
         display: inline;
-        float: right !important;
         margin-top: 0;
+        margin-right: -15px;
     }
 }
 .result {
